# aws-rust-hello-world

./: README.md
01_simple_client/: Cargo.toml  README.md
02_config-modification/: Cargo.toml  README.md
02_config-modification/src/: main.rs
03_config-builder-advanced/: Cargo.toml  README.md
03_config-builder-advanced/src/: main.rs
04_custom-provider/: Cargo.toml  README.md
04_custom-provider/src/: main.rs
simple_client/: Cargo.toml
simple_client/src/: main.rs
