[package]
name = "custom-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.1"
aws-sdk-cloudtrail = "1.9.0"
aws-types = "1.1.1"
tokio = { version = "1.35.1", features = ["full"] }
